[gd_scene load_steps=13 format=3 uid="uid://4r63aeiroxh2"]

[ext_resource type="PackedScene" uid="uid://csw0n7r56ltg8" path="res://scenes/enemies/inherit/enemy_base.tscn" id="1_kj6hr"]
[ext_resource type="Script" path="res://scripts/ememies/floop.gd" id="2_6f2pa"]
[ext_resource type="Shader" path="res://shader/player.gdshader" id="2_qbifs"]
[ext_resource type="Texture2D" uid="uid://btkudb6dboh44" path="res://assest/enemies/floop.png" id="3_arcds"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6784x"]
resource_local_to_scene = true
shader = ExtResource("2_qbifs")
shader_parameter/color_opacity = 0.0
shader_parameter/main_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_steqt"]
atlas = ExtResource("3_arcds")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8p8p"]
atlas = ExtResource("3_arcds")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wpdoi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_steqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8p8p")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k6wuq"]
size = Vector2(12, 11)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nlqiq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ai1bx"]
bg_color = Color(1, 0, 0.113725, 1)

[sub_resource type="LabelSettings" id="LabelSettings_81kol"]
font_size = 7

[node name="floop" instance=ExtResource("1_kj6hr")]
script = ExtResource("2_6f2pa")
max_health = 12
speed = 70

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="2"]
texture_filter = 1
material = SubResource("ShaderMaterial_6784x")
sprite_frames = SubResource("SpriteFrames_wpdoi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_k6wuq")

[node name="RayCast2D" type="RayCast2D" parent="." index="4"]
target_position = Vector2(-10, 0)
collision_mask = 4

[node name="healthbar" type="ProgressBar" parent="." index="5"]
visible = false
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = -6.0
theme_override_styles/background = SubResource("StyleBoxEmpty_nlqiq")
theme_override_styles/fill = SubResource("StyleBoxFlat_ai1bx")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="healthbar" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -11.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
text = "5/5"
label_settings = SubResource("LabelSettings_81kol")
horizontal_alignment = 1
vertical_alignment = 2

[node name="wait_to_jump" type="Timer" parent="." index="6"]

[node name="explosion" parent="." index="7"]
position = Vector2(0, 3)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." index="15"]

[connection signal="timeout" from="wait_to_jump" to="." method="_on_wait_to_jump_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
